# Breakout-CPP-Exam

./: CMakeLists.txt  README.txt  main.cpp
src/: Core.cpp  Core.h  Utils.cpp  Utils.h
src/Components/: Element.cpp  Element.h  Font.cpp  Font.h  IComponent.h  IGame.h  IPosition.h  Image.cpp  Image.h  Screen.cpp  Screen.h  Text.cpp  Text.h
src/Gameparts/: Ball.cpp  Ball.h  Board.cpp  Board.h  Brick.cpp  Brick.h  Info.cpp  Info.h
src/Managers/: GameManager.cpp  GameManager.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h
